# whoop-integration-site

./: .env.example  .gitignore  BUILD_PLAN.md  Dockerfile  Makefile  README.md  vercel.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_p4_persistence_foundation.py  0003_p5_canonical_schema.py  0004_ai_benchmark_provenance.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py  time.py
backend/app/db/: session.py
backend/app/jobs/: check_integrity.py  run_sync.py  seed.py
backend/app/models/: __init__.py  athlete_profile.py  facts.py  oauth_state.py  overlays.py  settings.py  whoop_connection.py
backend/app/repositories/: __init__.py  annotations.py  base.py  goals.py  recoveries.py  settings.py  sleeps.py  sync.py  workouts.py
backend/endurasync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  fact_fixtures.py  test_ai_api.py  test_api_auth.py  test_check_integrity_job.py  test_classification.py  test_current_week_metrics.py  test_dashboard_api.py  test_goal_api.py  test_goals.py  test_health.py  test_recovery_strain_api.py  test_recovery_strain_metrics.py  test_reports_api.py  test_reports_metrics.py  test_repositories.py  test_run_sync_job.py  test_settings_and_profile.py  test_sync_api.py  test_sync_orchestrator.py  test_time_buckets.py  test_whoop_oauth.py  test_whoop_provider_client.py  test_whoop_provider_models.py  test_whoop_transformers.py  test_workouts_api.py
(+124 files in other folders)
